--- a/src/Components/Domiciles/ProductCategories/Defoult/Default.css
+++ b/src/Components/Domiciles/ProductCategories/Defoult/Default.css
@@ -1,53 +1,91 @@
-section.categorySection{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 100vw;
-    margin-bottom: 5vh;
-    background: linear-gradient(var(--colorYellow) 10%, var(--colorOrange) 90%);
+section.categorySection {
+  align-items: center;
+  background: linear-gradient(var(--colorYellow) 10%, var(--colorOrange) 90%);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-bottom: 5vh;
+  width: 100vw;
 }
-section.categorySection a{
-    color: var(--colorNavWhite);
-    display: flex;
-    background-color: var(--colorRed);
+section.categorySection a {
+  background-color: var(--colorRed);
+  color: var(--colorNavWhite);
+  display: flex;
+  margin-top: 2vh;
+  text-decoration: none;
+}
+section.categorySection a:hover {
+  background-color: var(--colorOldRed);
+}
+section.categorySection .selectCategory {
+  align-items: center;
+  background-color: var(--colorRed);
+  border: solid 5px var(--colorOldRed);
+  color: var(--colorNavWhite);
+  display: flex;
+  height: auto;
+  justify-content: center;
+  padding: 2vh;
+  text-align: center;
+  width: 100vw;
+}
+section.categorySection .selectCategory img {
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+  -webkit-border-radius: 50%;
+  border-radius: 50%;
+  height: 10vh;
+  margin-right: 5vw;
+  width: 10vh;
+}
+section.categorySection .productsList {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  margin-top: 5vh;
+  width: 90%;
+}
+section.categorySection
+  .productsList
+  .pizzaCard:last-child
+  .pizzaFullDescription {
+  align-items: center;
+  display: flex;
+  flex-direction: column-reverse;
+  justify-content: space-between;
+  margin: 5px 0;
+  width: 90%;
+}
+section.categorySection
+  .productsList
+  .pizzaCard:last-child
+  .pizzaFullDescription
+  .pizzaInfo {
+  margin-top: 15px;
+  width: 90%;
+}
+@media (max-width: 480px) {
+  section.categorySection a {
+    font-size: 0.9rem;
+    padding: 10px;
+  }
+}
+@media (min-width: 481px) and (max-width: 769px) {
+  section.categorySection a {
+    font-size: 1.2rem;
+    padding: 15px;
+  }
+}
+@media (min-width: 770px) and (max-width: 993px) {
+  section.categorySection a {
+    font-size: 1.4rem;
     padding: 20px;
-    font-size: 1.5rem;
-    text-decoration: none;
+  }
 }
-
-section.categorySection a:hover{
-    background-color: var(--colorOldRed);
-}
-section.categorySection .selectCategory{
-    align-items:center;
-    background-color: var(--colorRed);
-    border: solid 5px var(--colorOldRed);
-    color: var(--colorNavWhite);
-    display: flex;
-    font-family: 'Open Sans', sans-serif;;
-    height: auto;
-    padding: 2vh;
-    justify-content: center;
-    text-align: center;
-    width: 100vw;
-}
-
-section.categorySection .selectCategory img{
-    border-radius: 50%;
-    -webkit-border-radius: 50%;
-    -moz-border-radius: 50%;
-    -ms-border-radius: 50%;
-    -o-border-radius: 50%;
-    height: 10vh;
-    width: 10vh;
-    margin-right: 5vw;
-}
-
-section.categorySection .productsList{
-    display: flex;
-    width: 90%;
-    margin-top: 5vh;
-    justify-content: space-evenly;
-    flex-wrap: wrap;
+@media (min-width: 994px) {
+  section.categorySection a {
+    font-size: 1.6rem;
+    padding: 25px;
+  }
 }
