--- a/src/Components/Domiciles/ProductCategories/Defoult/ProductCard/ProductCard.css
+++ b/src/Components/Domiciles/ProductCategories/Defoult/ProductCard/ProductCard.css
@@ -1,118 +1,133 @@
-.productCard{
-    display: flex;
+.productCard {
+  -moz-border-radius: 20px;
+  -ms-border-radius: 20px;
+  -o-border-radius: 20px;
+  -webkit-border-radius: 20px;
+  align-items: center;
+  background-color: var(--colorDivInfo);
+  border-radius: 20px;
+  color: var(--colorTextBlack);
+  display: flex;
+  flex-direction: column;
+  height: auto;
+  justify-content: space-evenly;
+  margin-bottom: max(2vh, 20px);
+  padding: 5px;
+}
+.productCard .productName {
+  align-items: center;
+  display: flex;
+  height: auto;
+  justify-content: center;
+  margin-bottom: 5px;
+}
+.productCard .productFullDescription {
+  align-items: center;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 5px;
+  min-height: 160px;
+  width: 90%;
+}
+.productCard .productFullDescription .productImage {
+  align-items: center;
+  background-color: var(--colorOldRed);
+  display: flex;
+  height: auto;
+  justify-content: center;
+  width: 50%;
+}
+.productCard .productFullDescription .productImage img {
+  border: solid 2px var(--colorOldRed);
+  height: auto;
+  min-height: 100px;
+  width: 90%;
+}
+.productCard .productFullDescription .productInfo {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 2px;
+  width: 45%;
+}
+.productCard .productFullDescription .productInfo .productDescriptionText {
+  align-items: center;
+  display: flex;
+  margin-bottom: 5px;
+  max-width: 200px;
+  overflow-wrap: break-word;
+  text-align: center;
+  width: 90%;
+}
+.productCard .productFullDescription .productInfo .productValue {
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 5px;
+  text-align: center;
+  width: 90%;
+}
+@media (max-width: 480px) {
+  .productCard {
+    min-height: 200px;
+    min-width: 260px;
+  }
+  .productCard .productFullDescription {
     flex-direction: column;
-    color: var(--colorTextBlack);
-    border-radius: 20px;
-    align-items: center;
-    justify-content: space-evenly;
-    height: auto;
-    padding: 5px;
-    margin-bottom: max(2vh,20px);
-    background-color: var(--colorDivInfo);
-    -webkit-border-radius: 20px;
-    -moz-border-radius: 20px;
-    -ms-border-radius: 20px;
-    -o-border-radius: 20px;
+  }
+  .productCard .productFullDescription .productImage {
+    width: 70%;
+  }
+  .productCard .productFullDescription .productInfo {
+    width: 100%;
+  }
+  .productCard .productFullDescription .productInfo .productDescriptionText {
+    min-width: 90%;
+  }
 }
-
-.productCard .productName{
-    display: flex;
-    height: auto;
-    align-items: center;
-    justify-content: center;
-    margin-bottom: 5px;
-}
-.productCard .productFullDescription{
-    display: flex;
-    align-items: center;
-    margin-bottom: 5px;
-    width: 90%;
-    min-height: 160px;
-    justify-content: space-between;
-}
-
-.productCard .productFullDescription .productImage{
-    display: flex;
-    align-items: center;
-    justify-content: center;
+@media (min-width: 481px) and (max-width: 769px) {
+  .productCard {
+    min-height: 250px;
+    width: 400px;
+  }
+  .productCard .productFullDescription .productImage {
     width: 40%;
-    height: auto;
+  }
+  .productCard .productFullDescription .productInfo {
+    width: 60%;
+  }
+  .productCard .productFullDescription .productInfo .productDescriptionText {
+    min-width: 90%;
+  }
 }
-
-.productCard .productFullDescription .productImage img{
-    border-radius: 50%;
-    border: solid 2px var(--colorOldRed);
-    height: 100px;
-    width: 100px;
-    -webkit-border-radius: 50%;
-    -moz-border-radius: 50%;
-    -ms-border-radius: 50%;
-    -o-border-radius: 50%;
-}
-
-.productCard .productFullDescription .productInfo{
-    display: flex;
-    min-height: 144px;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
+@media (min-width: 770px) and (max-width: 993px) {
+  .productCard {
+    min-height: 300px;
+    width: 400px;
+  }
+  .productCard .productFullDescription .productImage {
+    width: 45%;
+  }
+  .productCard .productFullDescription .productInfo {
     width: 55%;
-    padding: 2px;
+  }
+  .productCard .productFullDescription .productInfo .productDescriptionText {
+    min-width: 93%;
+  }
 }
-
-.productCard .productFullDescription .productInfo .productDescriptionText{
-    display: flex;
-    width: 90%;
-    max-width: 200px;
-    overflow-wrap: break-word;
-    align-items: center;
-    text-align: center;
-    margin-bottom: 5px;
-}
-
-.productCard .productFullDescription .productInfo .productValue{
-    display: flex;
-    width: 90%;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    margin-bottom: 5px;
-}
-
-@media (max-width: 480px){
-    .productCard{
-        min-height: 200px;
-        min-width: 300px;
-    }
-    .productCard .productFullDescription{flex-direction: column;}
-    .productCard .productFullDescription .productImage{width: 70%;}
-    .productCard .productFullDescription .productInfo{width: 100%;}
-    .productCard .productFullDescription .productInfo .productDescriptionText{min-width: 90%;}
-}
-@media (min-width: 481px) and (max-width: 769px){
-    .productCard{
-        min-height: 250px;
-        min-width: 400px;
-    }
-    .productCard .productFullDescription .productImage{width: 40%;}
-    .productCard .productFullDescription .productInfo{width: 60%;}
-    .productCard .productFullDescription .productInfo .productDescriptionText{min-width: 90%;}
-}
-@media (min-width: 770px) and (max-width: 993px){
-    .productCard{
-        min-height: 300px;
-        min-width: 400px;
-    }
-    .productCard .productFullDescription .productImage{width: 45%;}
-    .productCard .productFullDescription .productInfo{width: 55%;}
-    .productCard .productFullDescription .productInfo .productDescriptionText{min-width: 93%;}
-}
-@media (min-width: 993px){
-    .productCard{
-        min-height: 300px;
-        min-width: 450px;
-    }
-    .productCard .productFullDescription .productImage{width: 50%;}
-    .productCard .productFullDescription .productInfo{width: 50%;}
-    .productCard .productFullDescription .productInfo .productDescriptionText{min-width: 95%;}
+@media (min-width: 993px) {
+  .productCard {
+    min-height: 300px;
+    width: 450px;
+  }
+  .productCard .productFullDescription .productImage {
+    width: 50%;
+  }
+  .productCard .productFullDescription .productInfo {
+    width: 50%;
+  }
+  .productCard .productFullDescription .productInfo .productDescriptionText {
+    min-width: 95%;
+  }
 }
