--- a/src/Components/Domiciles/ProductCategories/Unselect/Unselect.css
+++ b/src/Components/Domiciles/ProductCategories/Unselect/Unselect.css
@@ -3,12 +3,12 @@
       background-color: var(--colorRed);
       color: var(--colorNavWhite);
       display: flex;
-      font-family: 'Open Sans', sans-serif;;
       height: auto;
       justify-content: center;
       text-align: center;
       width: 100vw;
-      font-size: 2vw;
+      font-size: 1rem;
+      padding: 15px;
   }
 
   @media (max-width: 480px){
