--- a/src/Components/Main/Main.css
+++ b/src/Components/Main/Main.css
@@ -1,6 +1,8 @@
 .container{
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     background: linear-gradient(var(--colorRed) 20%, var(--colorOrange) 80%);
     width: 100vw;
+    min-height: 100vh;
 }
