--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,11 @@ body, *{
   margin: 0;
   padding: 0;
   overflow-x: hidden;
+  font-family: 'Open Sans', sans-serif;
+}
+
+a,button{
+  font-family: 'Comic Neue', cursive;
 }
 
 :root{
