--- a/src/Components/Main/Header/Header.css
+++ b/src/Components/Main/Header/Header.css
@@ -1,8 +1,5 @@
 header{
     background-color: var(--colorRed);
-}
-
-.headerFloat{
-    position: fixed;
-    z-index: 2;
+    z-index: 3;
+    height: 80px;
 }
