--- a/src/Components/ShoppingCart/ProductCardInCart/ProductCardInCart.css
+++ b/src/Components/ShoppingCart/ProductCardInCart/ProductCardInCart.css
@@ -21,6 +21,7 @@
   justify-content: center;
   margin-bottom: 5px;
   padding: 10px 0;
+  text-align: center;
   width: 90%;
 }
 .productCardInCart .productName h3 {
@@ -105,7 +106,7 @@
     flex-direction: column;
   }
   .productCardInCart .productFullDescription .productImage {
-    width: 70%;
+    width: 100%;
   }
   .productCardInCart .productFullDescription .productInfo {
     width: 100%;
@@ -114,7 +115,7 @@
     .productFullDescription
     .productInfo
     .productDescriptionText {
-    min-width: 90%;
+    width: 100%;
   }
 }
 @media (min-width: 481px) and (max-width: 769px) {
@@ -123,10 +124,10 @@
     width: 400px;
   }
   .productCardInCart .productFullDescription .productImage {
-    width: 40%;
+    width: 60%;
   }
   .productCardInCart .productFullDescription .productInfo {
-    width: 60%;
+    width: 40%;
   }
   .productCardInCart
     .productFullDescription
@@ -141,10 +142,10 @@
     width: 400px;
   }
   .productCardInCart .productFullDescription .productImage {
-    width: 45%;
+    width: 55%;
   }
   .productCardInCart .productFullDescription .productInfo {
-    width: 55%;
+    width: 45%;
   }
   .productCardInCart
     .productFullDescription
