--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -101,7 +101,7 @@
   width: 95%;
 }
 .carouselImageHome .imageHome #carouselImage {
-  max-width: 100%;
+  max-height: 100%;
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
