--- a/src/Components/ShoppingCart/ProductCardInCart/ButtonsCardCart/ButtonCardCart.css
+++ b/src/Components/ShoppingCart/ProductCardInCart/ButtonsCardCart/ButtonCardCart.css
@@ -41,3 +41,10 @@ button.buttonAmountSend {
     font-weight: 700;
     transition: all 1s;
 }
+.ButtonCardCart{
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
