--- a/src/Components/Domiciles/ProductCategories/Defoult/ProductCard/ProductCard.css
+++ b/src/Components/Domiciles/ProductCategories/Defoult/ProductCard/ProductCard.css
@@ -11,7 +11,7 @@
   flex-direction: column;
   height: auto;
   justify-content: space-evenly;
-  margin-bottom: max(2vh, 20px);
+  margin: max(1vw,10px);
   padding: 5px;
 }
 .productCard .productName {
